--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Oxidised Elegance</title>
+  <title>One Jewels</title>
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/script.js"></script>
 </head>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+
