--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Oxidised Elegance</h1>
+    <h1>One Jewels</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#shop">Shop</a>
@@ -76,4 +76,5 @@
 
 </body>
 </html>
+
 
